// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should render <Selector/> with numbers 1`] = `
<select
  className="custom-root"
  onChange={[Function]}
  value={10}
>
  <option
    className="custom-item"
    value={10}
  >
    10 results per page
  </option>
  <option
    className="custom-item"
    value={20}
  >
    20 results per page
  </option>
</select>
`;

exports[`Selector should render <Selector/> with strings 1`] = `
<select
  className="custom-root"
  onChange={[Function]}
  value="index-a"
>
  <option
    className="custom-item"
    value="index-a"
  >
    Index A
  </option>
  <option
    className="custom-item"
    value="index-b"
  >
    Index B
  </option>
</select>
`;
